--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div class="container">
+        
+    </div>
+
     <script type="module" src="main.js"></script>
 </body>
 </html>
